# lang-lens

./: README.md  main.py  pyproject.toml
lang_lens/: __init__.py  inspection.py  lens.py
lang_lens/axis_discovery/: __init__.py  axis.py  axis_discovery.py  pca_discovery.py
lang_lens/explorer/: explorer.py  web_explorer.py
lang_lens/explorer_app/: explorer_state.pkl  main.py
lang_lens/text_store/: __init__.py  text_store.py
