[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lang-lens"
version = "0.1.0"
description = "A Python library/framework for exploring and visualizing text embeddings with semantic axes, neighbors, and projections."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

# Core dependencies
dependencies = [
    "numpy>=1.21",
    "scikit-learn>=1.0",
    "matplotlib>=3.5",
]

[project.urls]
homepage = "https://github.com/yourname/lang-lens"
documentation = "https://github.com/yourname/lang-lens#readme"
repository = "https://github.com/yourname/lang-lens"